# bottlerocket-core-kit

./: .gitignore  .mailmap  BUILDING.md  CHANGELOG.md  Cargo.toml  GLOSSARY.md  Makefile  Twoliter.toml
.amazonq/rules/: 01-implementing-features.md  02-using-git.md  03-bottlerocket-git-format.md
.github/workflows/: build.yml  update-eni-max-pods.yaml
advisories/10.1.0/: BRSA-hc1ikaaaqfgw.toml
advisories/10.5.0/: BRSA-ja1ptrrpkcey.toml  BRSA-ng7athla9aog.toml
advisories/10.9.0/: BRSA-fokfzmhxepqx.toml  BRSA-kvjmd7tqofdu.toml  BRSA-teob8iclrtit.toml
advisories/11.0.0/: BRSA-mavhpoajhdy8.toml  BRSA-s6xothqqu5vw.toml
advisories/12.0.0/: BRSA-h3op2bshbahi.toml
advisories/12.1.0/: BRSA-ekgg7vl6mixe.toml
advisories/5.0.0/: BRSA-0khj8kjohnfy.toml  BRSA-1q7yahvpheci.toml  BRSA-2cp5qbcspr8r.toml  BRSA-2vcgxe5a1gi8.toml  BRSA-abcrltx3gdzh.toml  BRSA-bvc4l89azoro.toml  BRSA-cuqjzwtm0l8o.toml  BRSA-cz6dip9kzbvg.toml  BRSA-dmyrtubzntzz.toml  BRSA-dvso9pxc9axy.toml  BRSA-eqm9d3oif9ab.toml  BRSA-kvhzdpsmxquk.toml  BRSA-n8dchsayuh98.toml  BRSA-naplkd21isa9.toml  BRSA-nbgwqejadxsx.toml  BRSA-rpx4fhcip2vr.toml  BRSA-si0ai9i3ewve.toml  BRSA-vfybarzdd1zk.toml  BRSA-xxkjnkht27yf.toml  BRSA-z1ziwuqpyacc.toml
advisories/5.4.2/: BRSA-i3wlupztu5jm.toml
advisories/6.1.0/: BRSA-k2a84ixupxse.toml
advisories/6.1.1/: BRSA-7qwvpkfrhqgr.toml  BRSA-etyl1dz8fjvy.toml
advisories/7.0.0/: BRSA-nwcjchmf4glm.toml
advisories/8.2.0/: BRSA-leg349bma1kc.toml  BRSA-newyz3jucdu5.toml
advisories/9.1.0/: BRSA-a48wncul1rh1.toml  BRSA-bcardktkyoc9.toml  BRSA-hbnyaarqfmwl.toml  BRSA-yrtutyr4c95s.toml
advisories/staging/: BRSA-7qwvpkfrhqgr.toml  BRSA-ekgg7vl6mixe.toml  BRSA-h3op2bshbahi.toml  BRSA-k2a84ixupxse.toml  BRSA-leg349bma1kc.toml  BRSA-newyz3jucdu5.toml
docs/: ENCRYPTED_STORAGE.md
kits/bottlerocket-core-kit/: Cargo.toml
sources/: Cargo.toml  clarify.toml  deny.toml
sources/api/: openapi.yaml
sources/api/apiclient/: Cargo.toml  README.md  README.tpl
sources/api/apiclient/src/: apply.rs  cloud_resolvers.rs  ephemeral_storage.rs  exec.rs  get.rs  lib.rs  lockdown.rs  main.rs  network.rs  report.rs  set.rs  tls_resolvers.rs  update.rs  uri_resolver.rs
sources/api/apiclient/src/exec/: connect.rs  terminal.rs
sources/api/apiserver/: Cargo.toml
sources/api/apiserver/src/server/: controller.rs  ephemeral_storage.rs  error.rs  exec.rs  mod.rs
sources/api/bootstrap-containers/src/: main.rs
sources/api/bork/src/: main.rs
sources/api/certdog/src/: main.rs
sources/api/corndog/: Cargo.toml
sources/api/corndog/src/: main.rs
sources/api/datastore/src/: filesystem.rs  key.rs  lib.rs
sources/api/datastore/src/deserialization/: pairs.rs
sources/api/datastore/src/serialization/: mod.rs  pairs.rs
sources/api/host-containers/: Cargo.toml
sources/api/host-containers/src/: config.rs  main.rs
sources/api/migration/migrator/: Cargo.toml
sources/api/migration/migrator/src/: args.rs  main.rs  test.rs
sources/api/pluto/: Cargo.toml
sources/api/pluto/src/: aws.rs  ec2.rs  eks.rs  main.rs
sources/api/prairiedog/src/: bootconfig.rs  error.rs  initrd.rs  main.rs
sources/api/schnauzer/: Cargo.toml
sources/api/schnauzer/src/: main.rs  v1.rs
sources/api/schnauzer/src/helpers/: mod.rs
sources/api/schnauzer/tests/: multicall_integration.rs
sources/api/settings-committer/src/: main.rs
sources/api/shibaken/src/: admin_userdata.rs  main.rs  partition.rs
sources/api/shibaken/src/warmpool/: autoscaling_warm_pool.rs
sources/api/storewolf/src/: main.rs
sources/api/sundog/src/: main.rs
sources/api/thar-be-settings/: Cargo.toml
sources/api/thar-be-settings/src/: config.rs  main.rs  service.rs
sources/api/thar-be-updates/src/: main.rs
sources/aws-smithy-experimental/src/: hyper_1_0.rs
sources/bloodhound/: Cargo.toml
sources/bloodhound/src/: lib.rs  main.rs  output.rs  results.rs  system_access.rs
sources/bootstrap-commands/src/: main.rs
sources/bottlerocket-image-features/: Cargo.toml  README.md
sources/bottlerocket-image-features/src/: lib.rs
sources/bottlerocket-release/: build.rs
sources/bottlerocket-release/src/: lib.rs
sources/brush/: Cargo.toml  README.md
sources/brush/src/: main.rs
sources/cfsignal/src/: cloudformation.rs  error.rs  main.rs  system_check.rs
sources/dogtag/src/: lib.rs
sources/driverdog/src/: main.rs
sources/early-boot-config/early-boot-config-provider/src/: provider.rs
sources/early-boot-config/early-boot-config/src/: main.rs
sources/early-boot-config/user-data-providers/ec2-imds/src/: lib.rs
sources/ecs-gpu-init/: go.mod  go.sum
sources/ghostdog/: Cargo.toml
sources/ghostdog/src/: error.rs  infiniband.rs  main.rs
sources/host-ctr/: go.mod  go.sum
sources/host-ctr/cmd/host-ctr/: ecr.go  main.go  main_test.go
sources/imdsclient/src/: lib.rs
sources/logdog/src/: main.rs
sources/metricdog/src/: main.rs  main_test.rs  metricdog.rs  systemd.rs
sources/models/: Cargo.toml
sources/models/src/: ephemeral_storage.rs  lib.rs
sources/netdog/: Cargo.toml  README.md
sources/netdog/src/: dns.rs  main.rs  vlan_id.rs
sources/netdog/src/cli/: commit.rs  generate_net_config.rs  mod.rs  write_resolv_conf.rs
sources/netdog/src/net_config/: error.rs  mod.rs  v1.rs  v2.rs  v3.rs
sources/netdog/src/networkd/: mod.rs
sources/notation-image-verifier/: go.mod  main.go  main_test.go
sources/pciclient/src/: lib.rs  private.rs
sources/rottweiler/: Cargo.toml  README.md
sources/rottweiler/src/: block_device.rs  directory.rs  fscrypt.rs  key.rs  main.rs  measure.rs  mount_point.rs  system.rs
sources/static-pods/src/: main.rs
sources/updater/block-party/src/: lib.rs
sources/updater/signpost/src/: state.rs
sources/updater/update_metadata/src/: lib.rs  se.rs
sources/updater/updog/src/: main.rs  transport.rs
sources/whippet/: Cargo.toml  README.md
sources/whippet/src/: broker.rs  child.rs  dbus_policy.rs  error.rs  main.rs  policy.rs  socket.rs
sources/whippet/tests/data/: main.toml
sources/whippet/tests/data/policies/: 01-first-policy.toml  02-second-policy.toml
tools/: validate-changelog.sh
(+10 files in other folders)
