[workspace]
resolver = "2"
members = [
  "kits/bottlerocket-core-kit",
  "packages/amazon-ecs-cni-plugins",
  "packages/amazon-ssm-agent",
  "packages/amazon-vpc-cni-plugins",
  "packages/aws-iam-authenticator",
  "packages/aws-otel-collector",
  "packages/aws-signer-notation-plugin",
  "packages/aws-signing-helper",
  "packages/bash",
  "packages/binutils",
  "packages/chrony",
  "packages/cni",
  "packages/cni-plugins",
  "packages/conntrack-tools",
  "packages/containerd-1.7",
  "packages/containerd-2.0",
  "packages/containerd-2.1",
  "packages/coreutils",
  "packages/libcryptsetup",
  "packages/dbus-broker",
  "packages/docker-cli-25",
  "packages/docker-cli-29",
  "packages/docker-engine-25",
  "packages/docker-engine-29",
  "packages/docker-init",
  "packages/e2fsprogs",
  "packages/early-boot-config",
  "packages/ecr-credential-helper",
  "packages/ecr-credential-provider-1.28",
  "packages/ecr-credential-provider-1.29",
  "packages/ecr-credential-provider-1.30",
  "packages/ecr-credential-provider-1.31",
  "packages/ecr-credential-provider-1.32",
  "packages/ecr-credential-provider-1.33",
  "packages/ecr-credential-provider-1.34",
  "packages/ecs-agent",
  "packages/ecs-gpu-init",
  "packages/ethtool",
  "packages/filesystem",
  "packages/findutils",
  "packages/glibc",
  "packages/grep",
  "packages/host-ctr",
  "packages/iproute",
  "packages/iptables",
  "packages/hwloc",
  "packages/iputils",
  "packages/kexec-tools",
  "packages/keyutils",
  "packages/kmod",
  "packages/kubernetes-1.28",
  "packages/kubernetes-1.29",
  "packages/kubernetes-1.30",
  "packages/kubernetes-1.31",
  "packages/kubernetes-1.32",
  "packages/kubernetes-1.33",
  "packages/kubernetes-1.34",
  "packages/libacl",
  "packages/libaio",
  "packages/libattr",
  "packages/libaudit",
  "packages/libbpf",
  "packages/libcap",
  "packages/libcrypto",
  "packages/libdevmapper",
  "packages/libelf",
  "packages/libexpat",
  "packages/libffi",
  "packages/libgcc",
  "packages/libglib",
  "packages/libinih",
  "packages/libisal",
  "packages/libjansson",
  "packages/libmnl",
  "packages/libncurses",
  "packages/libnetfilter_conntrack",
  "packages/libnetfilter_cthelper",
  "packages/libnetfilter_cttimeout",
  "packages/libnetfilter_queue",
  "packages/libnfnetlink",
  "packages/libnftnl",
  "packages/libnl",
  "packages/libnvidia-container",
  "packages/libnvme",
  "packages/libpcre",
  "packages/libpopt",
  "packages/libseccomp",
  "packages/libselinux",
  "packages/libsemanage",
  "packages/libsepol",
  "packages/libstd-rust",
  "packages/libtirpc",
  "packages/libtss2",
  "packages/liburcu",
  "packages/libxcrypt",
  "packages/libz",
  "packages/libzstd",
  "packages/login",
  "packages/makedumpfile",
  "packages/mdadm",
  "packages/netdog",
  "packages/nftables",
  "packages/notation",
  "packages/notation-image-verifier",
  "packages/nvidia-container-toolkit",
  "packages/nvidia-k8s-device-plugin",
  "packages/nvme-cli",
  "packages/open-vm-tools",
  "packages/os",
  "packages/pciutils",
  "packages/pigz",
  "packages/policycoreutils",
  "packages/procps",
  "packages/rdma-core",
  "packages/readline",
  "packages/release",
  "packages/runc",
  "packages/selinux-policy",
  "packages/soci-snapshotter",
  "packages/static-pods",
  "packages/strace",
  "packages/systemd-252",
  "packages/tpm2-tools",
  "packages/systemd-257",
  "packages/util-linux",
  "packages/xfsprogs"
]
