[package]
name = "bottlerocket-core-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"

[package.metadata.build-kit]
vendor = "bottlerocket"

[lib]
path = "../kit.rs"

[build-dependencies]
amazon-ecs-cni-plugins = { path = "../../packages/amazon-ecs-cni-plugins" }
amazon-ssm-agent = { path = "../../packages/amazon-ssm-agent" }
amazon-vpc-cni-plugins = { path = "../../packages/amazon-vpc-cni-plugins" }
aws-iam-authenticator = { path = "../../packages/aws-iam-authenticator" }
aws-otel-collector = { path = "../../packages/aws-otel-collector" }
aws-signer-notation-plugin = { path = "../../packages/aws-signer-notation-plugin" }
aws-signing-helper = { path = "../../packages/aws-signing-helper" }
bash = { path = "../../packages/bash" }
binutils = { path = "../../packages/binutils" }
chrony = { path = "../../packages/chrony" }
cni = { path = "../../packages/cni" }
cni-plugins = { path = "../../packages/cni-plugins" }
conntrack-tools = { path = "../../packages/conntrack-tools" }
containerd-1_7 = { path = "../../packages/containerd-1.7" }
containerd-2_0 = { path = "../../packages/containerd-2.0" }
containerd-2_1 = { path = "../../packages/containerd-2.1" }
coreutils = { path = "../../packages/coreutils" }
dbus-broker = { path = "../../packages/dbus-broker" }
docker-cli-25 = { path = "../../packages/docker-cli-25" }
docker-cli-29 = { path = "../../packages/docker-cli-29" }
docker-engine-25 = { path = "../../packages/docker-engine-25" }
docker-engine-29 = { path = "../../packages/docker-engine-29" }
docker-init = { path = "../../packages/docker-init" }
e2fsprogs = { path = "../../packages/e2fsprogs" }
early-boot-config = { path = "../../packages/early-boot-config" }
ecr-credential-helper = { path = "../../packages/ecr-credential-helper" }
ecr-credential-provider-1_29 = { path = "../../packages/ecr-credential-provider-1.29" }
ecr-credential-provider-1_30 = { path = "../../packages/ecr-credential-provider-1.30" }
ecr-credential-provider-1_31 = { path = "../../packages/ecr-credential-provider-1.31" }
ecr-credential-provider-1_32 = { path = "../../packages/ecr-credential-provider-1.32" }
ecr-credential-provider-1_33 = { path = "../../packages/ecr-credential-provider-1.33" }
ecr-credential-provider-1_34 = { path = "../../packages/ecr-credential-provider-1.34" }
ecs-agent = { path = "../../packages/ecs-agent" }
ecs-gpu-init = { path = "../../packages/ecs-gpu-init" }
ethtool = { path = "../../packages/ethtool" }
filesystem = { path = "../../packages/filesystem" }
findutils = { path = "../../packages/findutils" }
glibc = { path = "../../packages/glibc" }
grep = { path = "../../packages/grep" }
host-ctr = { path = "../../packages/host-ctr" }
hwloc = { path = "../../packages/hwloc" }
iproute = { path = "../../packages/iproute" }
iptables = { path = "../../packages/iptables" }
iputils = { path = "../../packages/iputils" }
kexec-tools = { path = "../../packages/kexec-tools" }
keyutils = { path = "../../packages/keyutils" }
kmod = { path = "../../packages/kmod" }
kubernetes-1_29 = { path = "../../packages/kubernetes-1.29" }
kubernetes-1_30 = { path = "../../packages/kubernetes-1.30" }
kubernetes-1_31 = { path = "../../packages/kubernetes-1.31" }
kubernetes-1_32 = { path = "../../packages/kubernetes-1.32" }
kubernetes-1_33 = { path = "../../packages/kubernetes-1.33" }
kubernetes-1_34 = { path = "../../packages/kubernetes-1.34" }
libacl = { path = "../../packages/libacl" }
libaio = { path = "../../packages/libaio" }
libattr = { path = "../../packages/libattr" }
libaudit = { path = "../../packages/libaudit" }
libbpf = { path = "../../packages/libbpf" }
libcap = { path = "../../packages/libcap" }
libcrypto = { path = "../../packages/libcrypto" }
libcryptsetup = { path = "../../packages/libcryptsetup" }
libdevmapper = { path = "../../packages/libdevmapper" }
libdrm = { path = "../../packages/libdrm" }
libelf = { path = "../../packages/libelf" }
libexpat = { path = "../../packages/libexpat" }
libffi = { path = "../../packages/libffi" }
libjson-c = { path = "../../packages/libjson-c" }
libgcc = { path = "../../packages/libgcc" }
libglib = { path = "../../packages/libglib" }
libinih = { path = "../../packages/libinih" }
libisal = { path = "../../packages/libisal" }
libjansson = { path = "../../packages/libjansson" }
libmnl = { path = "../../packages/libmnl" }
libncurses = { path = "../../packages/libncurses" }
libnetfilter_conntrack = { path = "../../packages/libnetfilter_conntrack" }
libnetfilter_cthelper = { path = "../../packages/libnetfilter_cthelper" }
libnetfilter_cttimeout = { path = "../../packages/libnetfilter_cttimeout" }
libnetfilter_queue = { path = "../../packages/libnetfilter_queue" }
libnfnetlink = { path = "../../packages/libnfnetlink" }
libnftnl = { path = "../../packages/libnftnl" }
libnl = { path = "../../packages/libnl" }
libnvidia-container = { path = "../../packages/libnvidia-container" }
libnvme = { path = "../../packages/libnvme" }
libpcre = { path = "../../packages/libpcre" }
libpopt = { path = "../../packages/libpopt" }
libseccomp = { path = "../../packages/libseccomp" }
libselinux = { path = "../../packages/libselinux" }
libsemanage = { path = "../../packages/libsemanage" }
libsepol = { path = "../../packages/libsepol" }
libstd-rust = { path = "../../packages/libstd-rust" }
libtirpc = { path = "../../packages/libtirpc" }
libtss2 = { path = "../../packages/libtss2" }
liburcu = { path = "../../packages/liburcu" }
libxcrypt = { path = "../../packages/libxcrypt" }
libz = { path = "../../packages/libz" }
libzstd = { path = "../../packages/libzstd" }
login = { path = "../../packages/login" }
makedumpfile = { path = "../../packages/makedumpfile" }
mdadm = { path = "../../packages/mdadm" }
netdog = {path = "../../packages/netdog" }
nftables = {path = "../../packages/nftables" }
notation = { path = "../../packages/notation" }
notation-image-verifier = { path = "../../packages/notation-image-verifier" }
nvidia-container-toolkit = { path = "../../packages/nvidia-container-toolkit" }
nvidia-k8s-device-plugin = { path = "../../packages/nvidia-k8s-device-plugin" }
nvme-cli = { path = "../../packages/nvme-cli" }
open-vm-tools = { path = "../../packages/open-vm-tools" }
os = { path = "../../packages/os" }
pciutils = { path = "../../packages/pciutils" }
pigz = { path = "../../packages/pigz" }
policycoreutils = { path = "../../packages/policycoreutils" }
procps = { path = "../../packages/procps" }
rdma-core = { path = "../../packages/rdma-core" }
readline = { path = "../../packages/readline" }
release = { path = "../../packages/release" }
rocm-k8s-device-plugin = { path = "../../packages/rocm-k8s-device-plugin" }
rottweiler = { path = "../../packages/rottweiler" }
runc = { path = "../../packages/runc" }
selinux-policy = { path = "../../packages/selinux-policy" }
soci-snapshotter = { path = "../../packages/soci-snapshotter" }
static-pods = { path = "../../packages/static-pods" }
strace = { path = "../../packages/strace" }
systemd-252 = { path = "../../packages/systemd-252" }
tpm2-tools = { path = "../../packages/tpm2-tools" }
systemd-257 = { path = "../../packages/systemd-257" }
util-linux = { path = "../../packages/util-linux" }
xfsprogs = { path = "../../packages/xfsprogs" }
