[package]
name = "brush"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
shlex.workspace = true
snafu.workspace = true
toml.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
pathdiff.workspace = true

[build-dependencies]
generate-readme.workspace = true
